# obcdctest

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.sh  cdc_log_parser.cpp  cdc_log_parser.h  logging_utils.h  main.cpp  obcdc_production_solution.md  plan.md
app/: cdc_config.cpp  cdc_config.h
docs/superpowers/plans/: 2026-05-31-obcdc-refactor.md
parser/: dml_event.h
rpc/: ls_pull_manager.cpp  ls_pull_manager.h  production_log_cb.cpp  production_log_cb.h  pull_state.cpp  pull_state.h
runtime/: checkpoint_store.cpp  checkpoint_store.h  logger.cpp  logger.h  safe_queue.h
worker/: consumer_worker.cpp  consumer_worker.h  log_task.h  pull_worker.cpp  pull_worker.h
